@@ -148,3 +148,5 @@ DEFINE_GUID(VHDDisconnectDriveId,0x629a8ca6,0x25c6,0x498c,0xb3,0xdd,0xe,0x18,0xd
 DEFINE_GUID(EditorFindAllListId,0x9bd3e306,0xefb8,0x4113,0x84,0x5,0xe7,0xba,0xde,0x8f,0xa,0x59);
 // {4811039D-03A3-4f15-8D7A-8EBC4BCC97F9}
 DEFINE_GUID(BadEditorCodePageId,0x4811039d,0x03a3,0x4f15,0x8d,0x7a,0x8e,0xbc,0x4b,0xcc,0x97,0xf9);
+// {D2750B57-D3E6-42f4-8137-231C50DDC6E4}
+DEFINE_GUID(UserMenuUserInputId,0xd2750b57,0xd3e6,0x42f4,0x81,0x37,0x23,0x1c,0x50,0xdd,0xc6,0xe4);
