@@ -1,4 +1,8 @@
-﻿drkns 15.05.2015 21:52:32 +0200 - build 4379
+﻿zg 16.05.2015 04:38:48 +0200 - build 4380
+
+1. 0002994: GUID для диалогов в User Menu, вызываемых посредством !?<title>?<init>!.
+
+drkns 15.05.2015 21:52:32 +0200 - build 4379
 
 1. Уточнение 4376.
 
